ERP/k8s/erp-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-client-service
  namespace: erp
spec:
  selector:
    app: erp-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
