ERP/k8s/erp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: erp
  name: erp-server-service
spec:
  selector:
    app: erp-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6000
  type: ClusterIP
